--- a/src/app/perfil-info/perfil-info.component.html
+++ b/src/app/perfil-info/perfil-info.component.html
@@ -1,1 +1,55 @@
-<p>perfil-info works!</p>
+<div>
+    <app-login *ngIf="loginService.isOpen$ | async"></app-login>
+    <app-register *ngIf="registerService.isOpen$ | async"></app-register>
+    <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
+        <app-header></app-header>
+        <div class="perfil-container">
+            <app-perfil-buttons></app-perfil-buttons>
+            <div class="perfil-info-container">
+                <div class="perfil-img-container">
+                    <img src="../../assets/img/image_aca.jpg" alt="">
+                    <p>Editar foto</p>
+                </div>
+                <div class="perfil-data-container">
+                    <div class="inputs-perfil-container">
+                        <div class="input-perfil">
+                            <p>Nombre de Usuario</p>
+                            <div class="input-container">
+                                <input type="text" name="" id=""  placeholder="ej.: Trepuca la Cuca">
+                                <i class="fa fa-pencil"></i>
+                            </div>
+                        </div>
+                        <div class="input-perfil">
+                            <p>Contraseña</p>
+                            <div class="input-container">
+                                <input type="password" name="" id=""  placeholder="ej.: Trepuca la Cuca">
+                                <i class="fa fa-pencil"></i>
+                            </div>
+                        </div>
+                        <div class="input-perfil">
+                            <p>Correo electrónico</p>
+                            <div class="input-container">
+                                <input type="email" name="" id=""  placeholder="ej.: pepito@gmail.com">
+                                <i class="fa fa-pencil"></i>
+                            </div>
+                        </div>
+                        <div class="input-perfil">
+                            <p>Fecha de creación</p>
+                            <div class="input-container">
+                                <input type="date" name="" id=""  placeholder="ej.: Trepuca la Cuca">
+                            </div>
+                        </div>
+                        <div class="input-perfil">
+                            <p>Zona horaria</p>
+                            <div class="input-container">
+                                <select name="" id=""></select>
+                            </div>
+                        </div>
+                    </div>
+                    <button>Guardar Cambios</button>
+                </div>
+            </div>
+        </div>
+        <app-footer></app-footer>
+    </div>
+</div>
