--- a/src/app/calendar-page/calendar-page.component.css
+++ b/src/app/calendar-page/calendar-page.component.css
@@ -9,7 +9,22 @@
 }
 
 .calendar-selectors{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     flex: 1;
+    gap: 20px;
+}
+
+.calendar-section{
+    display: flex;
+}
+
+hr{
+    width: 80%;
+    margin: 0;
+    border: 1px solid #000;
 }
 
 .calendar-container{
