--- a/src/app/calendar-page/calendar-page.component.html
+++ b/src/app/calendar-page/calendar-page.component.html
@@ -6,26 +6,29 @@
         <div class="calendar-page-content">
 
             <div class="calendar-selectors">
-                <div class="calendar-organizations">
-                    
+                <div class="calendar-section organizations">
                     <h2>ORGANIZACIONES</h2>
                     <ul>
                         <li *ngFor="let organization of organizations">{{ organization.name }}</li>
                     </ul>
-
+                </div>
+                <hr>
+                <div class="calendar-section activities">
+                    <h2>ACTIVIDADES</h2>
                     <div *ngFor="let organization of organizations">
-                        <h2>ACTIVIDADES</h2>
                         <h3>{{ organization.name }}</h3>
                         <ul>
                             <li *ngFor="let activity of organization.activities">{{ activity }}</li>
                         </ul>
                     </div>
+                </div>
+            </div>
 
-                    <div class="calendar-container">
-                        <app-calendar></app-calendar>
-                    </div>
+            <div class="calendar-container">
+                <app-calendar></app-calendar>
+            </div>
+        </div>
 
-                    </div>
-                    <app-footer></app-footer>
-                    </div>
-                    </div>
+        <app-footer></app-footer>
+    </div>
+</div>
