--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
 :root {
     --mainColor: #504136;
-    --mainColorLighter: #E3D5CA;
+    --mainColorLighter: #755e4e;
     --mainTextWhite: #fff;
     --mainTextBlack: #000;
 }
