carga de eventos y recordatorios utilizando api y base de datos (falta añadir popup de añadir evento, eliminar y editar funcional

--- a/src/app/calendar-page/calendar-page.component.css
+++ b/src/app/calendar-page/calendar-page.component.css
@@ -14,11 +14,16 @@
     align-items: center;
     justify-content: center;
     flex: 1;
+    margin: 60px 0px;
     gap: 20px;
 }
 
 .calendar-section{
     display: flex;
+}
+
+.organizations, .activities{
+    flex: 1;
 }
 
 hr{
