--- a/src/app/add-reminder/add-reminder.component.css
+++ b/src/app/add-reminder/add-reminder.component.css
@@ -38,6 +38,7 @@ i {
   font-size: xxx-large; 
   color: var(--mainTextWhite);
   background-color: transparent;
+  outline: 0px;
 }
 
 .input-title-container input::placeholder, 
@@ -56,12 +57,12 @@ i {
   color: white;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
   margin-bottom: 24px;
   width: 70%;
   border-top: 2px solid white;
   border-bottom: 2px solid white; 
-  padding: 10px;
+  padding: 20px 0px;
 }
 
 .input-reminder {
@@ -88,4 +89,21 @@ i {
 /* Cambia el color del icono del calendario en los inputs de tipo date */
 input[type="date"]::-webkit-calendar-picker-indicator {
   filter: invert(1);
+}
+
+textarea {
+  outline: 0px;
+}
+
+.send-button{
+  background-color: var(--mainColorLighter);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: large;
+  transition: 0.3s;
+  margin-top: 20px;
+  width: 100%;
 }
