--- a/src/app/add-reminder/add-reminder.component.html
+++ b/src/app/add-reminder/add-reminder.component.html
@@ -1,25 +1,38 @@
 <div class="add-reminder-container">
     <button (click)="closeAddReminderPopup()" class="close-button">X</button>
     <div class="input-title-container">
-        <input type="text" placeholder="Sin título">
+        <input type="text" placeholder="Sin título" id="input-title">
     </div>
     <div class="data-reminder-container">
         <div class="input-reminder">
             <p>Fecha Inicio:</p>
-            <input type="date">
+            <input type="datetime-local" id="input-start-date">
         </div>
         <div class="input-reminder">
             <p>Fecha Límite:</p>
-            <input type="date">
+            <input type="datetime-local" id="input-end-date">
         </div>
         <div class="input-reminder">
             <p>Repetir:</p>
-            <select name="" id="">
+            <select name="" id="input-repeat">
                 <option value="todos_los_dias" selected>Todos los días</option>
+            </select>
+        </div>
+        <div class="input-reminder">
+            <p>Color:</p>
+            <select name="" id="input-color">
+                <option value="red" selected>Red</option>
+                <option value="blue" selected>Blue</option>
+                <option value="yellow" selected>Yellow</option>
+                <option value="green" selected>Green</option>
+                <option value="purple" selected>Purple</option>
+                <option value="orange" selected>Orange</option>
+                <option value="pink" selected>Pink</option>
             </select>
         </div>
     </div>
     <div class="description-reminder-container">
-        <textarea placeholder="Descripción..."></textarea>
+        <textarea id="input-description" placeholder="Descripción..."></textarea>
     </div>
+    <button class="send-button" (click)="addReminder()">Añadir</button>
 </div>
