--- a/src/app/admin-create-organization/admin-create-organization.component.html
+++ b/src/app/admin-create-organization/admin-create-organization.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-login *ngIf="loginService.isOpen$ | async"></app-login>
     <app-register *ngIf="registerService.isOpen$ | async"></app-register>
+    <app-manage-members-pop-up *ngIf="manageMembersService.isOpen$ | async"></app-manage-members-pop-up>
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
         <app-header></app-header>
 
@@ -11,7 +12,7 @@
                     <app-admin-buttons></app-admin-buttons>
                     <div class="admin-content">
                         <div class="header-admin-create-organizations-container">
-                            <button>Añadir miembros</button>
+                            <button (click)="manageMembers()">Gestionar miembros</button>
                         </div>
                         <div class="event-description">
                             <div class="event-data">
