mini fix para que solo se puedan añadir eventos en días del mismo mes

--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -69,7 +69,7 @@
     background-color: transparent   ;
 }
 
-.dia:hover .dia-button, .contenido:hover .dia-button, .hora-dia .dia-button{
+.dia.normal:hover .dia-button, .contenido:hover .dia-button, .hora-dia .dia-button{
     opacity: 1;
 }
 
